# pixi-activate

./: Cargo.toml  README.md  pixi.toml
src/: main.rs
