[package]
name = "pixi-activate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
pixi = "0.15.2"
rattler = { version = "0.39.0", default-features = false }
rattler_cache = { version = "0.6.2", default-features = false }
rattler_conda_types = { version = "0.42.0", default-features = false, features = [
  "rayon",
] }